gcp/loki/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-server-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "somaz-gke-loki-lb-ip"
    networking.gke.io/managed-certificates: "loki-certificate"
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: loki-frontend-config
spec:
  rules:
  - host: loki.somaz.link
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: loki
            port:
              number: 3100
